# A3D

./: .clang-format  .gitignore  LICENSE  Makefile  Makefile.gl  Makefile.vk  meson.build  meson_options.txt
assets/: scene.a3dmap
include/: a3d.h  a3d_assets.h  a3d_camera.h  a3d_event.h  a3d_flycam.h  a3d_gfx.h  a3d_handles.h  a3d_input.h  a3d_logging.h  a3d_map.h  a3d_material.h  a3d_mesh.h  a3d_renderer.h  a3d_scene.h  a3d_texture.h  a3d_transform.h
include/opengl/: a3d_opengl.h  a3d_opengl_shader.h
include/vulkan/: a3d_vulkan_buffer.h
shaders_gl/: triangle.frag  triangle.vert
shaders_vk/: triangle.vert
src/: a3d.c  a3d_assets.c  a3d_camera.c  a3d_event.c  a3d_flycam.c  a3d_input.c  a3d_map.c  a3d_material.c  a3d_mesh.c  a3d_mesh_obj.c  a3d_renderer.c  a3d_scene.c  a3d_texture.c  a3d_window.c
src/opengl/: a3d_opengl.c  a3d_opengl_shader.c  a3d_opengl_texture.c
src/vulkan/: a3d_vulkan.c  a3d_vulkan_buffer.c  a3d_vulkan_debug.c  a3d_vulkan_pipeline.c
tests/: main.c
tools/: STYLE.md
